--- a/gb/23/7/20/n14038312.md
+++ b/gb/23/7/20/n14038312.md
@@ -1,63 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>真人版《白雪公主》不是肤如雪 7矮人只1人矮</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930965-20230215-mark-WB06-600x400.jpeg" />
 <h6>真人版《白雪公主》由瑞秋·曾格勒（Rachel Zegler）饰演，她曾出演《沙赞！众神之怒》的反派角色安西娅（Anthea）。图为《沙赞2》剧照。（华纳兄弟提供）
 </h6>
 <hr>
-	<p>【大纪元2023年07月20日讯】（大纪元记者叶子杰编译报导）真人版《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%BD%E9%9B%AA%E5%85%AC%E4%B8%BB.md#1">白雪公主</a>》演员阵容片场照曝光，迪士尼公司选角问题再度遭到网友及评论家的批评。而女主角<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%91%9E%E7%A7%8B%C2%B7%E6%9B%BE%E6%A0%BC%E5%8B%92.md#1">瑞秋·曾格勒</a>也被卷入风波，她公开对网友回应表示，她不想讨论选角，不要“把我贴上标签”。</p>
-<p>14日，《每日邮报》发布了迪士尼即将上映的真人版《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%BD%E9%9B%AA%E5%85%AC%E4%B8%BB.md#1">白雪公主</a>》片场照片<ahref="https://twitter.com/DailyMail/status/1679824302462447616" target="_blank" rel="noopener noreferrer">点这里看图片</a>），报导说<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%83%E4%B8%AA%E5%B0%8F%E7%9F%AE%E4%BA%BA.md#1">七个小矮人</a>具有不同的“性别、种族和身高”，标题为“白雪公主和七个同伴……政治正确？”该照片留言处出现了网友一面倒的批评声浪，其中包括了白雪公主的白雪肌肤问题。</p>
+	<p>【大纪元2023年07月20日讯】（大纪元记者叶子杰编译报导）真人版《白雪公主》演员阵容片场照曝光，迪士尼公司选角问题再度遭到网友及评论家的批评。而女主角瑞秋·曾格勒也被卷入风波，她公开对网友回应表示，她不想讨论选角，不要“把我贴上标签”。</p>
+<p>14日，《每日邮报》发布了迪士尼即将上映的真人版《白雪公主》片场照片（<span style="color: #0000ff;"><strong><a style="color: #0000ff;" href="https://twitter.com/DailyMail/status/1679824302462447616" target="_blank" rel="noopener noreferrer">点这里看图片</a></strong></span>），报导说七个小矮人具有不同的“性别、种族和身高”，标题为“白雪公主和七个同伴……政治正确？”该照片留言处出现了网友一面倒的批评声浪，其中包括了白雪公主的白雪肌肤问题。</p>
 <p>网友纷纷留言：“她的皮肤像雪一样白，因此被称为白雪公主。”“迪士尼的投资者肯定喜欢赔钱……”“迪士尼似乎一心要自我毁灭。”“立即出售所有迪士尼股票！”“这些矮人令人毛骨悚然，令人恐惧。不，谢谢！”“我爱的@迪士尼，能不能不要毁了我的童年！”</p>
 <p>事件发生后，迪士尼发言人向《每日野兽》发表的声明中称，“这些照片是假的，不是我们制作的。”后来《每日野兽》又报导，迪士尼的一位代表证实这些图片是真实的，但不是官方所提供的照片。报导传出一时让外界感到雾里看花，这是继真人版《小美人鱼》后，选角争议再次浮出水面。</p>
-<p>福克斯新闻评论员托米·拉伦（Tomi Lahren）在推特上<ahref="https://twitter.com/TomiLahren/status/1679841554175868933" target="_blank" rel="noopener noreferrer">点这里看讯息</a>）写说：“所以他们只让一个小人扮演矮人，是为了更加‘政治正确’吗？”“ 那么另外6个小人没有得到这份工作或考核，不知何故，这更‘敏感’？迪士尼就是个笑话。”</p>
-<p>美国导演、保守派政治评论员罗比·斯达巴克（Robby Starbuck）在推特上<ahref="https://twitter.com/robbystarbuck/status/1679844127440089088" target="_blank" rel="noopener noreferrer">点这里看讯息</a>）写道：“来认识一下迪士尼新苏醒的白雪公主电影的演员们。白雪公主现在是哥伦比亚的人，7个小矮人看起来更像是6个正常大小的时髦矮人和1个来自波特兰的小矮人。白雪公主不再有‘皮肤白如雪’。绝对荒谬。”</p>
-<p>迪士尼公司选角问题在网路上再次引起争议后，饰演白雪公主的女主角<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%91%9E%E7%A7%8B%C2%B7%E6%9B%BE%E6%A0%BC%E5%8B%92.md#1">瑞秋·曾格勒</a>（Rachel Zegler）也被卷入网友议论风波，15日，她在推特上表示，她不想再参与白雪公主选角的“无稽之谈”。</p>
-<p>22岁的曾格勒在推特上<ahref="https://twitter.com/rachelzegler/status/1680225020772057088" target="_blank" rel="noopener noreferrer">请点这里看讯息</a>）说：“非常感谢那些在网上为我辩护的人对我的关爱，但请不要在有关我选角的无稽之谈中，把我贴上标签。”“我真的真的不想看到这些。所以，我把这些照片留给你们！我希望每个孩子都知道，无论如何，他们都能成为公主。”</p>
+<p>福克斯新闻评论员托米·拉伦（Tomi Lahren）在推特上（<span style="color: #0000ff;"><strong><a style="color: #0000ff;" href="https://twitter.com/TomiLahren/status/1679841554175868933" target="_blank" rel="noopener noreferrer">点这里看讯息</a></strong></span>）写说：“所以他们只让一个小人扮演矮人，是为了更加‘政治正确’吗？”“ 那么另外6个小人没有得到这份工作或考核，不知何故，这更‘敏感’？迪士尼就是个笑话。”</p>
+<p>美国导演、保守派政治评论员罗比·斯达巴克（Robby Starbuck）在推特上（<span style="color: #0000ff;"><strong><a style="color: #0000ff;" href="https://twitter.com/robbystarbuck/status/1679844127440089088" target="_blank" rel="noopener noreferrer">点这里看讯息</a></strong></span>）写道：“来认识一下迪士尼新苏醒的白雪公主电影的演员们。白雪公主现在是哥伦比亚的人，7个小矮人看起来更像是6个正常大小的时髦矮人和1个来自波特兰的小矮人。白雪公主不再有‘皮肤白如雪’。绝对荒谬。”</p>
+<p>迪士尼公司选角问题在网路上再次引起争议后，饰演白雪公主的女主角瑞秋·曾格勒（Rachel Zegler）也被卷入网友议论风波，15日，她在推特上表示，她不想再参与白雪公主选角的“无稽之谈”。</p>
+<p>22岁的曾格勒在推特上（<span style="color: #0000ff;"><strong><a style="color: #0000ff;" href="https://twitter.com/rachelzegler/status/1680225020772057088" target="_blank" rel="noopener noreferrer">点这里看讯息</a></strong></span>）说：“非常感谢那些在网上为我辩护的人对我的关爱，但请不要在有关我选角的无稽之谈中，把我贴上标签。”“我真的真的不想看到这些。所以，我把这些照片留给你们！我希望每个孩子都知道，无论如何，他们都能成为公主。”</p>
 <p>2019年刚毕业才出道四年的瑞秋·曾格勒曾出演《西城故事》（2021）、《沙赞！众神之怒》（2023）和《饥饿游戏：鸣鸟与游蛇之歌》（2023）。</p>
 <p>她主演的《白雪公主》预计将于2024年3月在美国上映。</p>
-<figure id="attachment_13951376" aria-describedby="caption-attachment-13951376" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/03/id13951376-20230316-mark-WB02.jpeg"><img class=" wp-image-13951376" src="https://i.epochtimes.com/assets/uploads/2023/03/id13951376-20230316-mark-WB02-450x189.jpeg" alt="《沙赞！众神之怒》" width="600" b="252" /></a><figcaption id="caption-attachment-13951376" class="wp-caption-text">瑞秋·曾格勒（Rachel Zegler）（左）曾出演《沙赞！众神之怒》的反派角色。图为《沙赞2》剧照。（华纳兄弟提供）</figcaption></figure>
+<figure id="attachment_13951376" aria-describedby="caption-attachment-13951376" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/03/id13951376-20230316-mark-WB02.jpeg"><img decoding="async" class=" wp-image-13951376" src="https://i.epochtimes.com/assets/uploads/2023/03/id13951376-20230316-mark-WB02-450x189.jpeg" alt="《沙赞！众神之怒》" width="600" b="252" /></a><figcaption id="caption-attachment-13951376" class="wp-caption-text">瑞秋·曾格勒（Rachel Zegler）（左）曾出演《沙赞！众神之怒》的反派角色。图为《沙赞2》剧照。（华纳兄弟提供）</figcaption></figure>
 <p>责任编辑：苏漾</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987793.md#1">《小美人鱼》再释预告 真人与卡通版差异大引议论</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998144.md#1">李靖宇：《小美人鱼》争议不断 迪士尼也“觉醒”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000318.md#1">海莉·贝莉当《小美人鱼》引热议 导演谈选角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/23/n14002605.md#1">《小美人鱼》肤色引争议 海莉·贝莉回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/4/n13987793.md#1">《小美人鱼》再释预告 真人与卡通版差异大引议论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/16/n13998144.md#1">李靖宇：《小美人鱼》争议不断 迪士尼也“觉醒”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/19/n14000318.md#1">海莉·贝莉当《小美人鱼》引热议 导演谈选角</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/23/n14002605.md#1">《小美人鱼》肤色引争议 海莉·贝莉回应</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036236.md#1">冰岛女子转生为妹妹的女儿 记得前世丈夫名字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021438.md#1">冰雹外形酷似中共病毒  雹神示警！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13997939.md#1">【医案】此心安处即归乡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027897.md#1">【历史的瞬间】徐悲鸿 却撒彩墨在人间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032488.md#1">赋诗选文 昭明太子萧统的文学事业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14037711.md#1">【时事金扫描】传火箭军司令自杀 陷间谍嫌疑？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14037991.md#1">【新唐人快报】国会暴乱调查 川普斥政治迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035772.md#1">【未解之谜】“最强穿越者”的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036497.md#1">中芯国际掌门人突然被撤换 一年半来第二次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036339.md#1">川普谈如何在24小时内解决俄乌冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036363.md#1">共和党初选 华尔街押注川普的竞选对手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036050.md#1">泰勒丝演唱会撼动经济 4专辑挤前10名破纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036385.md#1">爱马仕包以其姓氏命名 传奇女星简?柏金去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036660.md#1">面临AI威胁 阿汤哥出面谈判挺演员仍无结果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036733.md#1">熊熊突宣布结婚喜讯 夫妻拍影片还原结婚过程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036770.md#1">导演诺兰让女儿演原子弹严重烧伤 引日影迷热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027443.md#1">超级食品纳豆 溶血栓、抗衰老 功效禁忌一次看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035592.md#1">泡泡尿是肾功能差？5信号要警惕 保肾别吃6类食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036725.md#1">梦到掉下来有何涵义？ 专家如此解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027447.md#1">每天吃一把蓝莓 改善大脑功能 降低血压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035380.md#1">蘑菇品种多 吃蘑菇真的不能错过这几种</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/20/n14038312.htm">真人版《白雪公主》不是肤如雪 7矮人只1人矮</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/20/n14038312.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/20/n14038312.htm">真人版《白雪公主》不是肤如雪 7矮人只1人矮</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/20/n14038312.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
